@@ -4,7 +4,7 @@ Changes for version 0.1 - released 2011/xx/yy
 
 This is the first version to be based on the Pake build tool.
 
-Advantages, compared to the yaml version:
+Advantages, compared to the ant version:
 . it does not depend on ANT anymore. This means it does not depend on java, either
 . simpler bootstrap process: download a single php file, execute it
 . out of the box support for sources on git repositories
@@ -13,3 +13,8 @@ Advantages, compared to the yaml version:
 
 Other changes:
 . the package.xml file is updated the same way as ezinfo.php is
+. Makefile files are not removed automatically (use the file.to_remove option to have them deleted)
+. Beside the ant directory, .git, build, dist and pake dirs are also excluded from the build
+. No support for building packages or dependent extensions yet
+. A zip file can be built beside a tarball
+. Source repo can be a local folder, besides git and svn
